src/objects/Account_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Child_Account__c</fullName>
        <description>For Account related lists : 
            Create a Manages / Operates" related lists for the child (hierarchies)</description>
        <label>Child Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Manage by / Operate by</relationshipLabel>
        <relationshipName>Accounts_Relationship</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IATACode__c</fullName>
        <description>As intended for airports, the code of the child account which represents the airport code</description>
        <formula>Child_Account__r.IATACode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IATA Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <description>For Account related lists : 
            Create a "Manage by / Operate by" related lists for the Parent account</description>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Manages / Operates</relationshipLabel>
        <relationshipName>Accounts_Relationship1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Account__c</columns>
        <columns>Child_Account__c</columns>
        <columns>IATACode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AcR-{0000000}</displayFormat>
        <label>Account Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounts Relationship</pluralLabel>
    <recordTypes>
        <fullName>Hierarchy</fullName>
        <active>true</active>
        <description>To represent a hierarchy instead of a grouping.</description>
        <label>Hierarchy</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>